@@ -5,6 +5,7 @@ Changelog
 ~~~~~~~~~~~~~~~~
 
 * Maintenance: Update djhtml (html formatting) library to v 1.5.2 (Loveth Omokaro)
+* Maintenance: Re-enable `strictPropertyInitialization` in tsconfig (Thibaud Colas)
 
 
 4.2 (xx.xx.xxxx) - IN DEVELOPMENT
